# platform.core.security.libprivilege-control

./: CMakeLists.txt  LICENSE.APLv2.0  README  app_group_list  dev_group_list  group  libprivilege-control.pc.in  passwd  project.config  smack-rules.service  smack-rules.service.in  smack_application_rules  smack_default_labeling  smack_default_rules  smack_default_rules2  smack_rules
api_feature_loader/: CMakeLists.txt  api_feature_loader.c
db/: 220.libprivilege-updater.patch.sh  load-rules-db.sql  rules-db-data.sql  rules-db-sql-udf.c  rules-db.sql  rules-db.xml  updater.sh
db/updates/: update-rules-db-data-to-v2.sql  update-rules-db-data-to-v3.sql  update-rules-db-data-to-v4.sql  update-rules-db-to-v2.sql  update-rules-db-to-v3.sql  update-rules-db-to-v4.sql
debian/: changelog  control  libprivilege-control-0.install.in  libprivilege-control-0.postinst  libprivilege-control-dev.install.in  rules
include/: access-db.h  common.h  privilege-control.h  rules-db-internals.h  rules-db.h
packaging/: libprivilege-control-conf.manifest  libprivilege-control.changes  libprivilege-control.manifest  libprivilege-control.spec  smack-default-labeling.service
permissions/: OSP.smack  OSP_account.read.smack  OSP_antivirus.smack  OSP_application.kill.smack  OSP_application.launch.smack  OSP_appmanager.kill.smack  OSP_appsetting.smack  OSP_appusage.smack  OSP_appwidgetprovider.install.smack  OSP_audiomanager.route.smack  OSP_audiorecorder.smack  OSP_bluetooth.admin.smack  OSP_bluetooth.gap.smack  OSP_bluetooth.health.smack  OSP_bluetooth.opp.smack  OSP_bluetooth.spp.smack  OSP_bluetoothmanager.smack  OSP_bookmark.read.smack  OSP_calendar.read.smack  OSP_calendar.write.smack  OSP_callforward.smack  OSP_camera.smack  OSP_cellbroadcast.smack  OSP_contact.read.smack  OSP_contact.write.smack  OSP_content.read.smack  OSP_content.smack  OSP_content.write.smack  OSP_customnetaccount.smack  OSP_dns.smack  OSP_download.smack  OSP_geolocationpermission.read.smack  OSP_graphics.smack  OSP_http.smack  OSP_ime.smack  OSP_inputmanager.smack  OSP_io.smack  OSP_location.smack  OSP_media.audio.equalizer.smack  OSP_media.audio.smack  (+216 more)
rule_loader/: CMakeLists.txt  load_rules.sh  rule_loader.c  smack-early-rules.service  smack-late-rules.service
src/: access-db.c  account-manage.c  common.c  debug-util.c  kill_app.c  privilege-control.c  rules-db-internals.c  rules-db.c  slp-su.c
udev/: uname_env
udev/rules/: 95-permissions-slp.rules
udev/rules.d/: 95-permissions-slp.rules
